--- a/templates/permissions/partial.permission_descriptions.twig
+++ b/templates/permissions/partial.permission_descriptions.twig
@@ -10,7 +10,7 @@
     <li class="list--legend">
         <p class="mbn mrs">{{ macros.status('Owner', 'notice') }}</p>
         <p class="mbn">
-            Owners can manage their application, its environments, and encrypted configuration.
+            Owners can manage their applications, their environments, and encrypted configuration.
             They can deploy to non-prod environments and grant non-prod access to others.
         </p>
     </li>
