--- a/templates/permissions/partial.add_permissions.twig
+++ b/templates/permissions/partial.add_permissions.twig
@@ -1,35 +1,18 @@
-{% extends 'base.twig' %}
-{% import 'macros.twig' as macros %}
-{% import 'macros.git.twig' as git_macros %}
 {% import 'macros.form.twig' as form_macros %}
 
-{% set js_components = ['application_permissions'] %}
-
-{% set page_title = 'Grant Application Permissions' %}
-
-{% block breadcrumb_links %}
-    <li><a href="{{ uriFor('applications') }}">Applications</a></li>
-    {% if application.organization -%}
-        <li><a href="{{ uriFor('organization', {'organization': application.organization.id}) }}">{{ application.organization.name }}</a></li>
-    {%- endif %}
-    <li><a href="{{ uriFor('application', {'application': application.id}) }}">{{ application.name }}</a></li>
-{% endblock %}
-
-{% block content %}
-    {{ block('meta') }}
-
-    <h2>Add Permissions</h2>
-    {{ block('add_permission_form') }}
-
-    <h2>Permission Levels</h2>
-    {% include 'permissions/partial.permission_descriptions.twig' %}
-{% endblock %}
+{%- if organization is organization -%}
+    {% set perm_mode = 'organization' %}
+    {% set entity_params = { 'organization': organization.id } %}
+{%- else -%}
+    {% set perm_mode = 'application' %}
+    {% set entity_params = { 'application': application.id } %}
+{%- endif -%}
 
 {% block add_permission_form %}
     {{ form_macros.form_errors(errors, is_csrf_error) }}
 
     <form method="post">
-        {{ form_macros.csrf_input('application_permission.add') }}
+        {{ form_macros.csrf_input(perm_mode ~ '_permissions.add') }}
 
         <ul class="form-fields form-wrapper">
             <li>
@@ -87,32 +70,7 @@
 
         <p>
             <button class="btn btn--action" type="submit">Add Permissions</button>
-            <a href="{{ uriFor('application', {'application': application.id}) }}">Cancel</a>
+            <a href="{{ uriFor(perm_mode, entity_params) }}">Cancel</a>
         </p>
     </form>
-{% endblock %}
-
-{% block meta %}
-    <ul class="meta-box">
-        <li>
-            <h6>Application</h6>
-            {{ application.name }}
-        </li>
-
-        <li>
-            <h6>Organization</h6>
-            {% if application.organization %}
-                <a href="{{ uriFor('organization', {'organization': application.organization.id}) }}">
-                    {{ application.organization.name }}
-                </a>
-            {% else %}
-                None
-            {% endif %}
-        </li>
-
-        <li>
-            <h6>Version Control</h6>
-            {{ git_macros.vcs(application) }}
-        </li>
-    </ul>
 {% endblock %}
