--- a/templates/permissions/remove_organization_permissions.twig
+++ b/templates/permissions/remove_organization_permissions.twig
@@ -3,14 +3,11 @@
 {% import 'macros.git.twig' as git_macros %}
 {% import 'macros.form.twig' as form_macros %}
 
-{% set page_title = 'Manage Application Permissions' %}
+{% set page_title = 'Manage Permissions' %}
 
 {% block breadcrumb_links %}
     <li><a href="{{ uriFor('applications') }}">Applications</a></li>
-    {% if application.organization -%}
-        <li><a href="{{ uriFor('organization', {'organization': application.organization.id}) }}">{{ application.organization.name }}</a></li>
-    {%- endif %}
-    <li><a href="{{ uriFor('application', {'application': application.id}) }}">{{ application.name }}</a></li>
+    <li><a href="{{ uriFor('organization', {'organization': organization.id}) }}">{{ organization.name }}</a></li>
 {% endblock %}
 
 {% block content %}
@@ -28,7 +25,7 @@
     {{ form_macros.form_errors(errors, is_csrf_error) }}
 
     <form method="post">
-        {{ form_macros.csrf_input('application_permission.remove') }}
+        {{ form_macros.csrf_input('organization_permissions.remove') }}
 
         <ul class="form-fields form-wrapper">
             <li>
@@ -60,7 +57,7 @@
 
         <p>
             <button type="submit" class="btn btn--destructive">Update Permissions</button>
-            <a href="{{ uriFor('application', {'application': application.id}) }}">Cancel</a>
+            <a href="{{ uriFor('organization', {'organization': organization.id}) }}">Cancel</a>
         </p>
     </form>
 {% endblock %}
@@ -68,24 +65,8 @@
 {% block meta %}
     <ul class="meta-box">
         <li>
-            <h6>Application</h6>
-            {{ application.name }}
-        </li>
-
-        <li>
             <h6>Organization</h6>
-            {% if application.organization %}
-                <a href="{{ uriFor('organization', {'organization': application.organization.id}) }}">
-                    {{ application.organization.name }}
-                </a>
-            {% else %}
-                None
-            {% endif %}
-        </li>
-
-        <li>
-            <h6>Version Control</h6>
-            {{ git_macros.vcs(application) }}
+            {{ organization.name }}
         </li>
     </ul>
 {% endblock %}
