Remove some functions from hal twig extension

--- a/sass/base/_tables.scss
+++ b/sass/base/_tables.scss
@@ -25,6 +25,12 @@
     }
 }
 
+.table--topped {
+    tbody td {
+        vertical-align: top;
+    }
+}
+
 th.table-mid-header {
     background: $bright-blue;
     color: $white;
