--- a/templates/admin/admin_dashboard.twig
+++ b/templates/admin/admin_dashboard.twig
@@ -7,18 +7,18 @@
 
 {% block content %}
     <h2>User Management</h2>
-    <p>
+    <div>
         <a href="{{ uriFor('users') }}" class="btn">
             {{ macros.icon('users') }} Users
         </a>
 
         <a href="{{ uriFor('admin.permissions') }}" class="btn">
-            {{ macros.icon('safe') }} Permissions
+            {{ macros.icon('safe') }} Manage Permissions
         </a>
-    </p>
+    </div>
 
     <h2>Manage Deployments</h2>
-    <p>
+    <div>
         <a href="{{ uriFor('environments') }}" class="btn">
             {{ macros.icon('leaf') }} Environments
         </a>
@@ -26,10 +26,10 @@
         <a href="{{ uriFor('groups') }}" class="btn">
             {{ macros.icon('server') }} Target Templates
         </a>
-    </p>
+    </div>
 
     <h2>Security</h2>
-    <p>
+    <div>
         <a href="{{ uriFor('id_providers') }}" class="btn">Identity Providers</a>
 
         <a href="{{ uriFor('credentials') }}" class="btn">
@@ -39,14 +39,14 @@
         <a href="{{ uriFor('admin.audit_history') }}" class="btn">
             {{ macros.icon('watch') }} Audit History
         </a>
-    </p>
+    </div>
 
     <h2>Manage Hal System</h2>
-    <p>
+    <div>
         <a href="{{ uriFor('admin.system_dashboard') }}" class="btn">System Dashboard</a>
         <a href="{{ uriFor('vcs_providers') }}" class="btn">Version Control Systems</a>
         <a href="{{ uriFor('admin.cache_management') }}" class="btn">Cache Management</a>
         <a href="{{ uriFor('admin.global_banner') }}" class="btn">Admin Messages</a>
-    </p>
+    </div>
 
 {% endblock %}
