--- a/templates/admin/audit_history.twig
+++ b/templates/admin/audit_history.twig
@@ -39,7 +39,7 @@
                 <tr>
                     <td colspan="4">
                         <div class="pre-wrapper">
-                            <pre>{{ event.data|jsonPretty }}</pre>
+                            <pre>{{ event.data|json_pretty }}</pre>
                         </div>
                     </td>
                 </tr>
