--- a/templates/admin/admin_dashboard.twig
+++ b/templates/admin/admin_dashboard.twig
@@ -3,50 +3,48 @@
 
 {% set page_title = 'Administrators' %}
 
-{% set is_admin = current_authorizations.isSuper() %}
-
 {% block content %}
     <h2>User Management</h2>
     <div>
-        <a href="{{ uriFor('users') }}" class="btn">
+        <a class="btn" href="{{ uriFor('users') }}">
             {{ macros.icon('users') }} Users
         </a>
 
-        <a href="{{ uriFor('admin.permissions') }}" class="btn">
+        <a class="btn" href="{{ uriFor('admin.permissions') }}">
             {{ macros.icon('safe') }} Manage Permissions
         </a>
     </div>
 
     <h2>Manage Deployments</h2>
     <div>
-        <a href="{{ uriFor('environments') }}" class="btn">
+        <a class="btn" href="{{ uriFor('environments') }}">
             {{ macros.icon('leaf') }} Environments
         </a>
 
-        <a href="{{ uriFor('groups') }}" class="btn">
+        <a class="btn" href="{{ uriFor('groups') }}">
             {{ macros.icon('server') }} Target Templates
         </a>
     </div>
 
     <h2>Security</h2>
     <div>
-        <a href="{{ uriFor('id_providers') }}" class="btn">Identity Providers</a>
+        <a class="btn" href="{{ uriFor('id_providers') }}">Identity Providers</a>
 
-        <a href="{{ uriFor('credentials') }}" class="btn">
+        <a class="btn" href="{{ uriFor('credentials') }}">
             {{ macros.icon('locked') }} Credentials
         </a>
 
-        <a href="{{ uriFor('admin.audit_history') }}" class="btn">
+        <a class="btn" href="{{ uriFor('admin.audit_history') }}">
             {{ macros.icon('watch') }} Audit History
         </a>
     </div>
 
     <h2>Manage Hal System</h2>
     <div>
-        <a href="{{ uriFor('admin.system_dashboard') }}" class="btn">System Dashboard</a>
-        <a href="{{ uriFor('vcs_providers') }}" class="btn">Version Control Systems</a>
-        <a href="{{ uriFor('admin.cache_management') }}" class="btn">Cache Management</a>
-        <a href="{{ uriFor('admin.global_banner') }}" class="btn">Admin Messages</a>
+        <a class="btn" href="{{ uriFor('admin.system_dashboard') }}">System Dashboard</a>
+        <a class="btn" href="{{ uriFor('vcs_providers') }}">Version Control Systems</a>
+        <a class="btn" href="{{ uriFor('admin.cache_management') }}">Cache Management</a>
+        <a class="btn" href="{{ uriFor('admin.global_banner') }}">Admin Messages</a>
     </div>
 
 {% endblock %}
