Clean up of form macros and html

--- a/templates/admin/admin_dashboard.twig
+++ b/templates/admin/admin_dashboard.twig
@@ -21,8 +21,8 @@
             {{ macros.icon('leaf') }} Environments
         </a>
 
-        <a class="btn" href="{{ uriFor('groups') }}">
-            {{ macros.icon('server') }} Target Templates
+        <a class="btn" href="{{ uriFor('templates') }}">
+            {{ macros.icon('folder-2') }} Target Templates
         </a>
     </div>
 
