--- a/templates/credentials/edit_credential.twig
+++ b/templates/credentials/edit_credential.twig
@@ -41,9 +41,9 @@
             </li>
 
             <li>
-                {% set has_error = form_macros.hasError(errors, 'name') %}
+                {% set has_error = form_macros.has_error(errors, 'name') ? ' is-error' : '' %}
                 <label for="name">Name</label>
-                <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="name" id="name" value="{{ form.name }}" maxlength="100" required>
+                <input type="text" class="text-input{{ has_error }}" name="name" id="name" value="{{ form.name }}" maxlength="100" required>
                 <small>Description or label for these credentials.</small>
             </li>
 
@@ -59,64 +59,9 @@
 
         <hr>
 
-        <ul class="form-fields form-wrapper">
-            <li data-type-specific data-aws_static>
-                {% set has_error = form_macros.hasError(errors, 'aws_key') %}
-                <label for="aws_key">AWS Access Key</label>
-                <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="aws_key" id="aws_key" maxlength="100" value="{{ form.aws_key }}" autocomplete="off">
-            </li>
-
-            <li data-type-specific data-aws_static>
-                {% set has_error = form_macros.hasError(errors, 'aws_secret') %}
-                <label for="aws_secret">AWS Secret</label>
-                <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="aws_secret" id="aws_secret" value="{{ form.aws_secret }}" autocomplete="off">
-                <small>This will be encrypted once saved.</small>
-            </li>
-        </ul>
-
-        <ul class="form-fields form-wrapper">
-            <li data-type-specific data-aws_role>
-                {% set has_error = form_macros.hasError(errors, 'aws_account') %}
-                <label for="aws_account">AWS Account ID</label>
-                <input type="text" class="text-input t50{{ has_error ? ' is-error' : '' }}" name="aws_account" id="aws_account" value="{{ form.aws_account }}" maxlength="25" autocomplete="off">
-                <small>AWS Account ID of the account that owns the resources.</small>
-            </li>
-
-            <li data-type-specific data-aws_role>
-                {% set has_error = form_macros.hasError(errors, 'aws_role') %}
-                <label for="aws_role">AWS Role</label>
-                <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="aws_role" id="aws_role" value="{{ form.aws_role }}" maxlength="100" autocomplete="off">
-                <small>Role for Hal to assume when modifying resources.</small>
-            </li>
-        </ul>
-
-        <ul class="form-fields form-wrapper">
-            <li data-type-specific data-privatekey>
-                {% set has_error = form_macros.hasError(errors, 'privatekey_username') %}
-                <label for="privatekey_username">Private Key Username</label>
-                <input type="text" class="text-input t50{{ has_error ? ' is-error' : '' }}" name="privatekey_username" id="privatekey_username" value="{{ form.privatekey_username }}" maxlength="100" autocomplete="off">
-                <small>User the private key belongs to.</small>
-            </li>
-
-            <li data-type-specific data-privatekey>
-                {% set has_error = form_macros.hasError(errors, 'privatekey_path') %}
-                <label for="privatekey_path">Private Key Path</label>
-                <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="privatekey_path" id="privatekey_path" value="{{ form.privatekey_path }}" maxlength="200" autocomplete="off">
-                <small>
-                    Path to the key on the file system. Not required if <b>File</b> is used.
-                </small>
-            </li>
-
-            <li data-type-specific data-privatekey>
-                {% set has_error = form_macros.hasError(errors, 'privatekey_file') %}
-                <label for="privatekey_file">Private Key File</label>
-                <textarea type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="privatekey_file" id="privatekey_file" rows="8">{{ form.privatekey_file }}</textarea>
-                <small>
-                    Contents of the private key file. Not required if <b>Path</b> is used.
-                    This will be encrypted once saved.
-                </small>
-            </li>
-        </ul>
+        {{ block('aws_static_fields') }}
+        {{ block('aws_role_fields') }}
+        {{ block('privatekey_fields') }}
 
         <p>
             <button type="submit" class="btn btn--action">Save Changes</button>
@@ -124,4 +69,69 @@
         </p>
 
     </form>
+{% endblock %}
+
+{% block aws_static_fields %}
+    <ul class="form-fields form-wrapper">
+        <li data-type-specific data-aws_static>
+            {% set has_error = form_macros.has_error(errors, 'aws_key') ? ' is-error' : '' %}
+            <label for="aws_key">AWS Access Key</label>
+            <input type="text" class="text-input{{ has_error }}" name="aws_key" id="aws_key" maxlength="100" value="{{ form.aws_key }}" autocomplete="off">
+        </li>
+
+        <li data-type-specific data-aws_static>
+            {% set has_error = form_macros.has_error(errors, 'aws_secret') ? ' is-error' : '' %}
+            <label for="aws_secret">AWS Secret</label>
+            <input type="text" class="text-input{{ has_error }}" name="aws_secret" id="aws_secret" value="{{ form.aws_secret }}" autocomplete="off">
+            <small>This will be encrypted once saved.</small>
+        </li>
+    </ul>
+{% endblock %}
+
+{% block aws_role_fields %}
+    <ul class="form-fields form-wrapper">
+        <li data-type-specific data-aws_role>
+            {% set has_error = form_macros.has_error(errors, 'aws_account') ? ' is-error' : '' %}
+            <label for="aws_account">AWS Account ID</label>
+            <input type="text" class="text-input t50{{ has_error }}" name="aws_account" id="aws_account" value="{{ form.aws_account }}" maxlength="25" autocomplete="off">
+            <small>AWS Account ID of the account that owns the resources.</small>
+        </li>
+
+        <li data-type-specific data-aws_role>
+            {% set has_error = form_macros.has_error(errors, 'aws_role') ? ' is-error' : '' %}
+            <label for="aws_role">AWS Role</label>
+            <input type="text" class="text-input{{ has_error }}" name="aws_role" id="aws_role" value="{{ form.aws_role }}" maxlength="100" autocomplete="off">
+            <small>Role for Hal to assume when modifying resources.</small>
+        </li>
+    </ul>
+{% endblock %}
+
+{% block privatekey_fields %}
+    <ul class="form-fields form-wrapper">
+        <li data-type-specific data-privatekey>
+            {% set has_error = form_macros.has_error(errors, 'privatekey_username') ? ' is-error' : '' %}
+            <label for="privatekey_username">Private Key Username</label>
+            <input type="text" class="text-input t50{{ has_error }}" name="privatekey_username" id="privatekey_username" value="{{ form.privatekey_username }}" maxlength="100" autocomplete="off">
+            <small>User the private key belongs to.</small>
+        </li>
+
+        <li data-type-specific data-privatekey>
+            {% set has_error = form_macros.has_error(errors, 'privatekey_path') ? ' is-error' : '' %}
+            <label for="privatekey_path">Private Key Path</label>
+            <input type="text" class="text-input{{ has_error }}" name="privatekey_path" id="privatekey_path" value="{{ form.privatekey_path }}" maxlength="200" autocomplete="off">
+            <small>
+                Path to the key on the file system. Not required if <b>File</b> is used.
+            </small>
+        </li>
+
+        <li data-type-specific data-privatekey>
+            {% set has_error = form_macros.has_error(errors, 'privatekey_file') ? ' is-error' : '' %}
+            <label for="privatekey_file">Private Key File</label>
+            <textarea type="text" class="text-input{{ has_error }}" name="privatekey_file" id="privatekey_file" rows="8">{{ form.privatekey_file }}</textarea>
+            <small>
+                Contents of the private key file. Not required if <b>Path</b> is used.
+                This will be encrypted once saved.
+            </small>
+        </li>
+    </ul>
 {% endblock %}
