--- a/templates/environment/edit_environment.twig
+++ b/templates/environment/edit_environment.twig
@@ -19,13 +19,13 @@
 
             <li>
                 <label>ID</label>
-                {{ environment.id|short_guid }}
+                {{ environment|short_guid }}
             </li>
 
             <li>
-                {% set has_error = form_macros.hasError(errors, 'name') %}
+                {% set has_error = form_macros.has_error(errors, 'name') ? ' is-error' : '' %}
                 <label for="name">Name</label>
-                <input type="text" class="text-input t50{{ has_error ? ' is-error' : '' }}" name="name" id="name" value="{{ form.name }}" maxlength="30" required>
+                <input type="text" class="text-input t50{{ has_error }}" name="name" id="name" value="{{ form.name }}" maxlength="30" required>
                 <small>
                     Unique name such as <span>"staging"</span> or <span>"prod"</span>.
                     <br>Alphanumeric, hyphen, and period characters only.
