--- a/templates/organization/add_organization.twig
+++ b/templates/organization/add_organization.twig
@@ -15,9 +15,9 @@
 
         <ul class="form-fields form-wrapper">
             <li>
-                {% set has_error = form_macros.hasError(errors, 'name') %}
+                {% set has_error = form_macros.has_error(errors, 'name') ? ' is-error' : '' %}
                 <label for="name">Name</label>
-                <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="name" id="name" value="{{ form.name }}" maxlength="100" required>
+                <input type="text" class="text-input{{ has_error }}" name="name" id="name" value="{{ form.name }}" maxlength="100" required>
                 <small>
                     Display description for this organization such as
                     <span>"MyTeam"</span> or <span>"My Secret Projects"</span>.
