--- a/templates/organization/edit_organization.twig
+++ b/templates/organization/edit_organization.twig
@@ -17,13 +17,13 @@
         <ul class="form-fields form-wrapper">
             <li>
                 <label>ID</label>
-                {{ organization.id|short_guid }}
+                {{ organization|short_guid }}
             </li>
 
             <li>
-                {% set has_error = form_macros.hasError(errors, 'name') %}
+                {% set has_error = form_macros.has_error(errors, 'name') ? ' is-error' : '' %}
                 <label for="name">Name</label>
-                <input type="text" class="text-input{{ has_error ? ' is-error' : '' }}" name="name" id="name" maxlength="100" value="{{ form.name }}" required>
+                <input type="text" class="text-input{{ has_error }}" name="name" id="name" maxlength="100" value="{{ form.name }}" required>
                 <small>
                     Display description for this organization such as
                     <span>"MyTeam"</span> or <span>"My Secret Projects"</span>.
